# gapFinder

./: README.md
gapFinder/: CMakeLists.txt
gapFinder/configs/: default.yaml
gapFinder/launch/: gap_finder_launch.py  tunnel_following_launch.py
gapFinder/scripts/: corridor_controller.py  corridor_enable_publisher.py  gap_finder_node.py  gap_finder_processing.py  tunnel_following_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gap_finder/lib/gap_finder/: corridor_cmd_bridge.py  corridor_controller.py  gap_finder_node.py  gap_finder_visual_node.py  modified_gap_finder_visual_node.py  scan_median_node.py
install/gap_finder/share/ament_index/resource_index/package_run_dependencies/: gap_finder
install/gap_finder/share/ament_index/resource_index/parent_prefix_path/: gap_finder
install/gap_finder/share/gap_finder/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gap_finder/share/gap_finder/cmake/: gap_finderConfig-version.cmake  gap_finderConfig.cmake
install/gap_finder/share/gap_finder/configs/: default.yaml
install/gap_finder/share/gap_finder/environment/: ament_prefix_path.dsv  path.dsv
install/gap_finder/share/gap_finder/launch/: gap_finder_launch.py  gap_finder_markers_only_launch.py  gap_finder_visual_launch.py  modified_gap_finder_visual_launch.py
install/gap_finder/share/gap_finder/rviz/: gap_finder_markers.rviz
log/: latest_build  latest_list
src/gap_finder/: CMakeLists.txt  package.xml
src/gap_finder/configs/: default.yaml
src/gap_finder/launch/: gap_finder_launch.py  modified_gap_finder_visual_launch.py
src/gap_finder/rviz/: gap_finder_markers.rviz
src/gap_finder/scripts/: corridor_controller.py  gap_finder_node.py  gap_finder_processing.py  gap_finder_visual_node.py  modified_gap_finder_visual_node.py  scan_median_node.py
